Tue Aug 30 16:09:53 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/Notify_Service/Notify_Server.cpp:

	  Removed extraneous ACE_DEBUG().

Tue Aug 30 15:56:49 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/Notify_Service/Notify_Server.cpp:

          Changed to add support for clean shutdown with SIGINT/SIGTERM
          using the Service_Shutdown class from the Svc_Utils library.

Tue Aug 30 12:42:18 2005  Chris Cleeland  <cleeland_c@ociweb.com>

        * orbsvcs/orbsvcs/Event/EC_TPC_Dispatching.h:
        * orbsvcs/orbsvcs/Event/EC_TPC_Dispatching.cpp:
        * orbsvcs/orbsvcs/Event/EC_TPC_Factory.h:
        * orbsvcs/orbsvcs/Event/EC_TPC_Factory.cpp:

	  Removed inclusion of .i files to complete my earlier commit.

Tue Aug 30 11:22:51 2005  Steve Totten  <totten_s@ociweb.com>

        * tests/IDL_Test/IDL_Test.mpc:
        * tests/IDL_Test/array_only.idl:
          Added a test for the IDL compiler to make sure code generated for
          an IDL file that contains nothing but an array definition will
          compile correctly.  Thanks to Yevgen Galchenko for supplying the
          test case.

Tue Aug 30 10:03:24 2005  Chris Cleeland  <cleeland_c@ociweb.com>

        * orbsvcs/orbsvcs/Event/EC_TPC_Dispatching.h:
        * orbsvcs/orbsvcs/Event/EC_TPC_Dispatching.cpp:
        * orbsvcs/orbsvcs/Event/EC_TPC_Dispatching_Task.h:
        * orbsvcs/orbsvcs/Event/EC_TPC_Factory.h:
        * orbsvcs/orbsvcs/Event/EC_TPC_ProxyConsumer.h:
        * orbsvcs/orbsvcs/Event/EC_TPC_ProxySupplier.h:
        * orbsvcs/orbsvcs/Event/EC_TPC_ProxySupplier.cpp:

          Fixed errors in Fuzz build and use of deprecated ACE cast macros

        * orbsvcs/orbsvcs/Event/EC_TPC_Dispatching.i:
        * orbsvcs/orbsvcs/Event/EC_TPC_Factory.i:

          Removed these b/c they're empty and fix a fuzz build.

Tue Aug 30 14:43:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * docs/Options.html: